distribution des tickets
